---------------------------------------------------------------------------------------------------
Version: 0.8.6
Date: 09. 01. 2018
  Changed:
    - Optimised graphics assets to drastically reduce the overall mod size (thanks to iamfactorio)
  Locales:
    - Added Russian translation (thanks to iamfactorio)
---------------------------------------------------------------------------------------------------
Version: 0.8.5
Date: 08. 01. 2018
  Bugfixes:
    - Fixed an item grouping issue that appeared when using Dectorio with all the flooring settings disabled
    - Fixed stack size of vanilla hazard concrete isn't modified when painted concrete setting is disabled
    - Fixed signals conflict with 'Attach Notes' mod
    - Made some changes to try to fix an issue with duplicate sign icons in heavily modded games
---------------------------------------------------------------------------------------------------
Version: 0.8.4
Date: 29. 12. 2017
  Added:
    - Cliff explosives support
  Changed:
    - Updated incompatible mod notification for PickerTweaks
    - Moved Stone path and Concrete to Dectorio crafting tab to keep landscaping items together
  Bugfixes:
    - Fixed migration issue when migrating old save games from Dectorio 0.7.1 or earlier
    - Fixed an issue that was causing an error to display when placing signs in certain situations
  Locales:
    - Updated German and Korean translations
---------------------------------------------------------------------------------------------------
Version: 0.8.3
Date: 20. 12. 2017
  Added:
    - Ability to place deep water and green deep water tiles
    - Ability to place trees
    - Map colours for all the painted concrete variants
  Changed:
    - Adjusted concrete layering to allow grid concrete and normal concrete to merge nicely
    - Updated grid concrete map colour to differentiate it from normal concrete
    - Adjusted icons for gravel items
  Bugfixes: